--- a/public/views/search.html
+++ b/public/views/search.html
@@ -2,7 +2,8 @@
 
         <input>
         <button></button>
-        <div ng-repeat="users in gameMob_users">
-            {{users.last_name}}
+        <div ng-repeat="users in gameMobtest_users">
+            {{users}}
+            {{sessions}}
 
         </div>
