--- a/public/views/signUp.html
+++ b/public/views/signUp.html
@@ -1,18 +1,18 @@
 <form>
 
     <h4>Choose a profile name</h4>
-    <input placeholder="Profile Name" name="ProfileName" ng-model="gameMob_user.user_id">
+    <input placeholder="Profile Name" name="ProfileName" ng-model="gameMobtest_user.user_id">
     <br>
     <h4>Your First Name</h4>
-    <input placeholder="First Name" name="FirstName" ng-model="gameMob_user.first_name">
+    <input placeholder="First Name" name="FirstName" ng-model="gameMobtest_user.first_name">
     <br>
     <h4>Your Last Name</h4>
-    <input placeholder="Last Name" name="LastName" ng-model="gameMob_user.last_name">
+    <input placeholder="Last Name" name="LastName" ng-model="gameMobtest_user.last_name">
     <br>
     <h4>Your Console of choice</h4>
-    <input placeholder="Console" name="Console" ng-model="gameMob_user.console">
+    <input placeholder="Console" name="Console" ng-model="gameMobtest_user.console">
     <br>
-    <div name="dateOfSignUp" ng-model="gameMob_user.sign_up_date"></div>
+
 
 
 
