--- a/public/views/signUp.html
+++ b/public/views/signUp.html
@@ -1,3 +1,5 @@
+
+<div class="container">
 <form>
 
     <h4>Choose a profile name</h4>
@@ -21,3 +23,4 @@
     <button type="submit" ng-click="submitForm()">Submit Profile Info</button>
     </hr>
 </form>
+    </div>
