--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,3 +1,10 @@
 This is home page for everyone
 <br>
 {{test}}
+<div class="container">
+    <div class="jumbotron">
+        <h1>Welcome to GamerMob</h1>
+        <p>A place to to find other gamers of similiar skill and interests and band together to take on your favorite games as an organized force!</p>
+        <p><a class="btn btn-primary btn-lg" ng-href="#/signup" role="button">Sign Up!</a> or <a class="btn btn-primary btn-lg" ng-href="#/" role="button">Sign in!</a></p>
+    </div>
+</div>
