--- a/public/views/search.html
+++ b/public/views/search.html
@@ -5,9 +5,9 @@
             Search by Date, Game, Start Time or Skill Level Here: <input ng-model="search">
             <div ng-repeat='session in test_sessions | filter:search'>
                 <ul>
-                    <li> Date of Session: {{session.date}}</li>
+                    <li> Date of Session: {{session.date | date: 'shortDate'}}</li>
                     <li> Game: {{session.game}}</li>
-                    <li> Start Time {{session.time}}</li>
+                    <li> Start Time {{session.time | date: 'shortTime'}}</li>
                     <li> Skill Level: {{session.skill_level}}</li>
                 </ul>
             </div>
