--- a/public/views/userHome.html
+++ b/public/views/userHome.html
@@ -1,74 +1,84 @@
-<h3>This will be the home page for a user</h3>
+<div class="container">
+    <h3>This will be the home page for a user</h3>
         {{test}}
 
-        <h5>Welcome back {{currentUser.user_id}}
+        <h5>Welcome back {{selectedUser.user_id}}
         <br>
-            Your console of choice is {{currentUser.console}}
+            Your console of choice is {{selectedUser.console}}
             <br>
-            First Name : {{currentUser.first_name}}
+            First Name : {{selectedUser.first_name}}
             <br>
-            Last Name : {{currentUser.last_name}}
+            Last Name : {{selectedUser.last_name}}
 
         </h5>
 
-        Member Since : {{currentUser.createdAt | date}}
+        Member Since : {{selectedUser.createdAt | date}}
         <br>
 
-<form>
-
-    <h2>Create a game session for others to join!</h2>
-    <h4>What game do you want to play?</h4>
-    <select name="SessionGame" ng-model="test_session.game">
-        <option value="Battlefield 4">Battlefield 4</option>
-        <option value="Call of Duty">Call of Duty</option>
-        <option value="Destiny">Destiny</option>
-        <option value="Diablo 3">Diablo 3</option>
-        <option value="PayDay 2">PayDay 2</option>
-    </select>
-    <br>
-    <h4>When do you want to play?</h4>
-    <input placeholder="Session Date" name="SessionDate" ng-model="test_session.date">
-    <div ng-controller="DateController">
-        <pre>Selected date is: <em>{{dt | date:'fullDate' }}</em></pre>
-
-        <h4>Popup</h4>
-        <div class="row">
-            <div class="col-md-6">
-                <p class="input-group">
-                    <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="dt" is-open="opened" min-date="minDate" max-date="'2015-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
-                <span class="input-group-btn">
-                    <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
-                </span>
-                </p>
-            </div>
-        </div>
-    </div>
-    <br>
-    <h4>What skill level would you prefer to play with?</h4>
-    <select name="SkillLevel" ng-model="test_session.skill_level">
-        <option value="Beginner">Beginner</option>
-        <option value="Recreational">Recreational</option>
-        <option value="Pro">Pro</option>
-        <option value="Any">Any</option>
-    </select>
-    <br>
-    <h4>What time do you want to start?</h4>
-    <input placeholder="Time of Session" name="SessionTime" ng-model="test_session.time">
-    <br>
-        {{currentUser.user_id}}
-        <button type="submit" ng-click="submitSession()">Create your session!</button>
-        </hr>
-
-</form>
+    <form>
         <div>
-            <ul id='example-messages' class='example-chat-messages'>
-                <li ng-repeat='msg in messages'>
-                    <strong class='example-chat-username'>{{msg.from}}</strong>
-                    {{msg.body}}
-                </li>
-            </ul>
-            <footer>
-                <input ng-model='msg' ng-keydown="addMessage($event)" type='text' id='messageInput'  placeholder='Type a message...'>
-            </footer>
+            <h2>Create a game session for others to join!</h2>
+            <h4>What game do you want to play?</h4>
+            <select name="SessionGame" ng-model="test_session.game">
+                <option value="Battlefield 4">Battlefield 4</option>
+                <option value="Call of Duty">Call of Duty</option>
+                <option value="Destiny">Destiny</option>
+                <option value="Diablo 3">Diablo 3</option>
+                <option value="PayDay 2">PayDay 2</option>
+            </select>
+            <br>
+        </div>
+        <div ng-controller="DateController">
+            <h4>When do you want to play?</h4>
+            <!--<input placeholder="Session Date" name="SessionDate" ng-model="test_session.date">-->
+
+            <div class="row">
+                <div class="col-md-2">
+                    <p class="input-group">
+                        <input type="text" class="form-control" datepicker-popup="{{format}}" ng-model="test_session.date" is-open="opened" min-date="minDate" max-date="'2015-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
+              <span class="input-group-btn">
+                <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+              </span>
+                    </p>
+                </div>
+            </div>
 
         </div>
+    <br>
+        <h4>What skill level would you prefer to play with?</h4>
+        <select name="SkillLevel" ng-model="test_session.skill_level">
+            <option value="Beginner">Beginner</option>
+            <option value="Recreational">Recreational</option>
+            <option value="Pro">Pro</option>
+            <option value="Any">Any</option>
+        </select>
+        <br>
+        <h4>What time do you want to start?</h4>
+        <div ng-controller="TimeController" class="col-md-3">
+
+            <timepicker ng-model="test_session.time" ng-change="changed()" hour-step="hstep" minute-step="mstep" show-meridian="ismeridian"></timepicker>
+
+            <pre class="alert alert-info">Time is: {{test_session.time | date:'shortTime' }}</pre>
+
+
+
+        </div>
+        <br>
+            {{currentUser.user_id}}
+            <button type="submit" ng-click="submitSession()">Create your session!</button>
+            </hr>
+
+    </form>
+            <div class="col-lg-1">
+                <ul id='example-messages' class='example-chat-messages'>
+                    <li ng-repeat='msg in messages'>
+                        <strong class='example-chat-username'>{{msg.from}}</strong>
+                        {{msg.body}}
+                    </li>
+                </ul>
+                <footer>
+                    <input ng-model='msg' ng-keydown="addMessage($event)" type='text' id='messageInput'  placeholder='Type a message...'>
+                </footer>
+
+        </div>
+</div>
