--- a/public/views/userHome.html
+++ b/public/views/userHome.html
@@ -1,19 +1,16 @@
 <div class="container">
-    <h3>This will be the home page for a user</h3>
-        {{test}}
-
-        <h5>Welcome back {{selectedUser.user_id}}
+    <div>
+        <h3>Welcome back {{selectedUser.user_id}}</h3>
         <br>
-            Your console of choice is {{selectedUser.console}}
-            <br>
-            First Name : {{selectedUser.first_name}}
-            <br>
-            Last Name : {{selectedUser.last_name}}
-
-        </h5>
+        Your console of choice is {{selectedUser.console}}
+        <br>
+        First Name : {{selectedUser.first_name}}
+        <br>
+        Last Name : {{selectedUser.last_name}}
 
         Member Since : {{selectedUser.createdAt | date}}
         <br>
+    </div>
 
     <form>
         <div>
@@ -58,18 +55,17 @@
 
             <timepicker ng-model="test_session.time" ng-change="changed()" hour-step="hstep" minute-step="mstep" show-meridian="ismeridian"></timepicker>
 
-            <pre class="alert alert-info">Time is: {{test_session.time | date:'shortTime' }}</pre>
+            <pre class="alert alert-info">The time you picked is {{test_session.time | date:'shortTime' }}</pre>
 
 
 
         </div>
         <br>
-            {{currentUser.user_id}}
+
             <button type="submit" ng-click="submitSession()">Create your session!</button>
-            </hr>
 
     </form>
-            <div class="col-lg-1">
+            <div>
                 <ul id='example-messages' class='example-chat-messages'>
                     <li ng-repeat='msg in messages'>
                         <strong class='example-chat-username'>{{msg.from}}</strong>
