--- a/public/views/home.html
+++ b/public/views/home.html
@@ -3,10 +3,10 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-lg-3">
+        <div class="col-md-6">
             <img src="http://news.superzoo.co.uk/wp-content/uploads/2013/08/Payday-2-Logo.jpg" class="img-responsive">
         </div>
-        <div class="col-lg-3">
+        <div class="col-md-6">
             <img src="http://thegamingliberty.com/wp-content/uploads/BORDERLANDS2LOGO.jpg" class="img-responsive">
         </div>
     </div>
