latest for heroku

--- a/public/views/userHome.html
+++ b/public/views/userHome.html
@@ -62,7 +62,7 @@
 
         </div>
         <br>
-
+            <!--<input ng-model="selectedUser.user_id">-->
             <button type="submit" ng-click="submitSession()">Create your session!</button>
 
     </form>
