--- a/public/views/home.html
+++ b/public/views/home.html
@@ -2,17 +2,29 @@
 <br>
 
 <div class="container">
+        <div class="jumbotron">
+        <h1>Welcome to GamerMob</h1>
+        <p>A place to find other gamers of similiar skill and interests and band together to take on your favorite games as an organized force!</p>
+        <p><a class="btn btn-primary btn-lg" ng-href="#/signup" role="button">Sign Up!</a> or <a class="btn btn-primary btn-lg" ng-href="#/" role="button">Sign in!</a></p>
+    </div>
     <div class="row">
+        <h3>Do you like to play these?</h3>
         <div class="col-md-6">
             <img src="http://news.superzoo.co.uk/wp-content/uploads/2013/08/Payday-2-Logo.jpg" class="img-responsive">
         </div>
         <div class="col-md-6">
             <img src="http://thegamingliberty.com/wp-content/uploads/BORDERLANDS2LOGO.jpg" class="img-responsive">
         </div>
-    </div>
-        <div class="jumbotron">
-        <h1>Welcome to GamerMob</h1>
-        <p>A place to to find other gamers of similiar skill and interests and band together to take on your favorite games as an organized force!</p>
-        <p><a class="btn btn-primary btn-lg" ng-href="#/signup" role="button">Sign Up!</a> or <a class="btn btn-primary btn-lg" ng-href="#/" role="button">Sign in!</a></p>
+        <div class="row">
+            <div class="col-md-6">
+                <img src="http://www.supergraphictees.com/wp-content/uploads/destiny-game-white.jpg" class="img-responsive">
+            </div>
+            <div class="col-md-6">
+                <img src="http://media1.gameinformer.com/imagefeed/featured/electronic-arts/battlefield/battlefield4/FakeLogo610.jpg">
+            </div>
+        </div>
+        <div class=container-fluid>
+            <h3>Well you're gonna need teammates! Find out how to get some! <a class="btn btn-primary btn-lg" ng-href="#/moreInfo" role="button">More Info!</a></h3>
+        </div>
     </div>
 </div>
