--- a/public/views/home.html
+++ b/public/views/home.html
@@ -25,6 +25,7 @@
         </div>
         <div class=container-fluid>
             <h3>Well you're gonna need teammates! Find out how to get some! <a class="btn btn-primary btn-lg" ng-href="#/moreInfo" role="button">More Info!</a></h3>
+            <input ng-model="firebaseUser">
         </div>
     </div>
 </div>
