--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -2,3 +2,17 @@
     width: 500px;
     height: 500px;
 }
+.full {
+    background: url('http://i.i.cbsi.com/cnwk.1d/i/tim/2013/03/26/close_1920x1080.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+.jumbotron {
+    opacity: .9;
+}
+
+.navbar {
+    background-color: #222222;
+}
