--- a/public/views/developer.html
+++ b/public/views/developer.html
@@ -1,11 +1,12 @@
-<div class="container">
-    <div class="jumbotron">
-        <p>This page is for those interested in knowing how I built my app. The front end was built using Bootstrap for my CSS and
-        Angular JS for the JavaScript.  I used several modules for Angular including ui-router and ui-bootstrap.  My back end was built using
+<div>
+    <div class="container">
+        <div class="jumbotron">
+            <p>This page is for those interested in knowing how I built my app. The front end was built using Bootstrap for my CSS and
+            Angular JS for the JavaScript.  I used several modules for Angular including ui-router and ui-bootstrap.  My back end was built using
             Node.js with the Express and Sequelize modules. I am using PostgreSQL as my main database for the user and session data and my
             messenger is using Firebase.
-        </p>
-
-
+            </p>
+        </div>
+        <div class="col-sm-12"></div>
     </div>
 </div>
