--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,14 +1,14 @@
 
-<br>
-
-<div class="container">
-        <div class="jumbotron">
-        <h1>Welcome to GamerMob</h1>
-        <p>A place to find other gamers of similiar skill and interests and band together to take on your favorite games as an organized force!</p>
-        <p><a class="btn btn-primary btn-lg" ng-href="#/signup" role="button">Sign Up!</a> or <a class="btn btn-primary btn-lg" ng-href="#/" role="button">Sign in!</a></p>
-    </div>
-        <div class=container-fluid>
-            <h3>Well you're gonna need teammates! Find out how to get some! <a class="btn btn-primary btn-lg" ng-href="#/moreInfo" role="button">More Info!</a></h3>
+<div >
+    <div class="container">
+            <div class="jumbotron">
+            <h1>Welcome to GamerMob</h1>
+            <p>A place to find other gamers of similiar skill and interests and band together to take on your favorite games as an organized force!</p>
+            <p><a class="btn btn-primary btn-lg" ng-href="#/signup" role="button">Sign Up!</a> or <a class="btn btn-primary btn-lg" ng-href="#/" role="button">Sign in!</a></p>
+        </div>
+            <div>
+                <h3>Well you're gonna need teammates! Find out how to get some! <a class="btn btn-primary btn-lg" ng-href="#/moreInfo" role="button">More Info!</a></h3>
+            </div>
         </div>
     </div>
 </div>
