--- a/public/views/userHome.html
+++ b/public/views/userHome.html
@@ -65,7 +65,7 @@
             <input ng-model="test_session.description">
         </div>
         <div class="col-lg-8">
-            <h2>Messenger</h2>
+            <h2>GamerMob Messenger</h2>
             <ul id='example-messages' class='example-chat-messages'>
                 <li ng-repeat='msg in messages'>
                     <strong class='example-chat-username'>{{msg.from}}</strong>
