--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,14 +1,41 @@
 
-<div >
-    <div class="container">
-            <div class="jumbotron">
+<div class="container">
+    <div class="jumbotron">
+            <div class="container">
             <h1>Welcome to GamerMob</h1>
-            <p>A place to find other gamers of similiar skill and interests and band together to take on your favorite games as an organized force!</p>
-            <p><a class="btn btn-primary btn-lg" ng-href="#/signup" role="button">Sign Up!</a> or <a class="btn btn-primary btn-lg" ng-href="#/" role="button">Sign in!</a></p>
+            <p class="lead">A place to find other gamers of similiar skill and interests and band together to take on your favorite games as an organized force!</p>
+            <!--<p><a class="btn btn-primary btn-lg" ng-href="#/signup" role="button">Sign Up!</a> or <a class="btn btn-primary btn-lg" ng-href="#/" role="button">Sign in!</a></p>-->
+            </div>
+    </div>
+    <div class="row text-center">
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="../public/Images/close_1920x1080.jpg" alt="destiny">
+                <div class="caption">
+                    <h3>Built for the Lone Wolves</h3>
+                    <p>GamerMob was built to connect gamers who don't have a fully organized team of more than one waiting to go every new game.</p>
+                </div>
+            </div>
         </div>
-            <div>
-                <h3>Well you're gonna need teammates! Find out how to get some! <a class="btn btn-primary btn-lg" ng-href="#/moreInfo" role="button">More Info!</a></h3>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="../public/Images/destiny-team.jpg" alt="destiny">
+                <div class="caption">
+                    <h3>Search Quickly or make your own session</h3>
+                    <p>Our games should load fast and finding others to play with you should also be quick.  Search through current sessions or create your own session!</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="../public/Images/Call-of-Duty-Advanced-3.jpg" alt="destiny">
+                <div class="caption">
+                    <h3>Teammates that talk back </h3>
+                    <p>Some games already have matchmaking, but finding teammates with mics doesn't always happen.  GamerMob is made for teams that want to communicate.</p>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
+
