--- a/public/views/home.html
+++ b/public/views/home.html
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="jumbotron">
             <div class="container">
-            <h1>Welcome to GameMob</h1>
+            <h1>Welcome to GamerMob</h1>
             <p class="lead">A place to find other gamers of similiar skill and interests and band together to take on your favorite games as an organized force!</p>
             <!--<p><a class="btn btn-primary btn-lg" ng-href="#/signup" role="button">Sign Up!</a> or <a class="btn btn-primary btn-lg" ng-href="#/" role="button">Sign in!</a></p>-->
             </div>
@@ -13,7 +13,7 @@
                 <img src="../public/Images/close_1920x1080.jpg" alt="bf4">
                 <div class="caption">
                     <h3>Built for the Lone Wolves</h3>
-                    <p>GameMob was built to connect gamers who don't have a fully organized team of more than one waiting to go every new game.</p>
+                    <p>GamerMob was built to connect gamers who don't have a fully organized team of more than one waiting to go every new game.</p>
                 </div>
             </div>
         </div>
@@ -31,7 +31,7 @@
                 <img src="../public/Images/Call-of-Duty-Advanced-3.jpg" alt="codaw">
                 <div class="caption">
                     <h3>Teammates that talk back </h3>
-                    <p>Some games already have matchmaking, but finding teammates with mics doesn't always happen.  GameMob is made for teams that want to communicate.</p>
+                    <p>Some games already have matchmaking, but finding teammates with mics doesn't always happen.  GamerMob is made for teams that want to communicate.</p>
                 </div>
             </div>
         </div>
