--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,6 +1,6 @@
 
 <div class="container">
-    <div class="jumbotron">
+    <div class="jumbotron jumbotron-light">
             <div class="container">
             <h1>Welcome to GamerMob</h1>
             <p class="lead">A place to find other gamers of similiar skill and interests and band together to take on your favorite games as an organized force!</p>
